<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sword_gray"
    android:theme="@style/Theme.Material3.Dark.NoActionBar">

    <TextView
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/partial_black"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/location_name_placeholder"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/location_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/location_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/location_image_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/location_description"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_name" />

    <TextView
        android:id="@+id/location_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|fill_horizontal"
        android:minHeight="60dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:text="@string/location_description_placeholder"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/location_contact_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_image" />

    <TextView
        android:id="@+id/location_contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/location_contact_info_placeholder"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/location_working_hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_description" />

    <TextView
        android:id="@+id/location_working_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:text="@string/location_working_hours_placeholder"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_contact_info" />

</androidx.constraintlayout.widget.ConstraintLayout>
